# laurenboon-WCRP-universe-fork

./: .gitignore  README.md  TODO.md  WCRP-universe_activity.json  WCRP-universe_consortia.json  WCRP-universe_frequency.json  WCRP-universe_grid-label.json  WCRP-universe_institution.json  WCRP-universe_license.json  WCRP-universe_mip.json  WCRP-universe_organisation.json  WCRP-universe_product.json  WCRP-universe_realm.json  WCRP-universe_resolution.json  WCRP-universe_source-type.json  del.ipynb  del2.ipynb  localloader.ipynb  pyproject.toml
JSONLDs/: author-CCovey.jsonld  author-KTaylor.jsonld  author-PDurack.jsonld  author.jsonld  institution.jsonld  merged-comp.jsonld  paper.jsonld
_tests/: test_terms_validation.py
activity/: 000_context.jsonld  dd.json  esd.json  input4mip.json  lmip.json  obs4mip.json  obs4ref.json  prototype.json
archive/: 000_context.jsonld  wcrp.json
area_label/: 000_context.jsonld  air.json  ccl.json  cl.json  crp.json  fis.json  gis.json  ifs.json  is.json  li.json  lnd.json  lus.json  multi.json  ng.json  pst.json  scl.json  sea.json  shb.json  si.json  simp.json  sir.json  sn.json  tree.json  u.json  ufs.json  veg.json  wl.json  x.json
branded_suffix/: 000_context.jsonld  ids.json  label.json  one_dd.json  one_id.json
branded_variable/: 000_context.jsonld  label.json
citation_url/: 000_context.jsonld  cmip6_url.json  gnl_url.json
comment/: 000_context.jsonld
consortium/: 000_context.jsonld  bccr-ucan.json  cnrm-mf.json  csir-wits-csiro.json  dwd-bsh.json  iiasa-iamc.json  ird-mf.json  norce-bccr.json  ouranos.json  (+3 more)
(+9532 files in other folders)
